# IntVisFinal

./: .gitignore  README.md  compare.html  index.html
css/: styles.css
csv/: c.csv  d.csv  e.csv  j.csv  k.csv  n.csv  r.csv  t.csv
csv_to_json/: Cargo.toml
csv_to_json/src/: main.rs
data/csv/: a.csv  b.csv  f.csv  g.csv  h.csv  i.csv  l.csv  m.csv  o.csv  p.csv  q.csv  s.csv  u.csv  v.csv  w.csv  x.csv  y.csv  z.csv
data/json/: combined_new.json  q.json
data/json2/: a.json  b.json  f.json  g.json  h.json  i.json  k.json  m.json  n.json  o.json  q.json
data/json3/: c.json  d.json  e.json  j.json  l.json  m.json  p.json  r.json  s.json  t.json  u.json  v.json  w.json  y.json  z.json
js/: main.js  radar.js
palette_parser/: Cargo.toml
palette_parser/src/: autopalette.rs  csv.rs  hist.rs  main.rs  utils.rs
pycolors/: main.py
scraper/: Cargo.toml
scraper/src/: main.rs
web/: compare.html  index.html  radar.html
web/css/: index.html  styles.css
web/css/js/: main.js
web/js/: main.js  radar.js
