[package]
name = "palette_parser"
version = "0.1.0"
authors = ["Casey <406326-casey@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.34.0"
chrono = "0.4.11"
csv="1.1.3"
serde = {version="1.0.106", features=["derive"]}
serde_json="1.0.51"
